# Gridlock-Flipkart

./: .gitignore  AGENTS.md  Event Impact Forecasting & Response Intelligence System.md  README.md  api.py  app.py  pyproject.toml  render.yaml  requirements.txt  train.py
backend/: api.py
data/: junction_vulnerability.csv
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/autopsy/: page.tsx
frontend/src/app/hotspots/: page.tsx
frontend/src/app/predict/: page.tsx
frontend/src/app/resources/: page.tsx
frontend/src/app/similarity/: page.tsx
frontend/src/app/vulnerability/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/lib/: api.ts
models/: cascade_calibrator.pkl  cascade_classifier.pkl  encoders.pkl  hotspots.pkl  impact_classifier.pkl  metrics.json  network.pkl  prolonged_classifier.pkl  resolution_regressor.pkl  resolution_regressor.ubj  similarity.pkl
src/: black_box.py  cascade_autopsy.py  digital_twin.py  early_warning.py  explain.py  feature_engineering.py  hotspot_detection.py  knowledge_graph.py  models.py  network.py  post_event.py  resources.py  similarity.py  ttf.py  vulnerability.py
ui/styles/: base.py  cards.py  sidebar.py  table.py
