[tool.poetry]
name = "cascadeiq"
version = "1.0.0"
description = "Event Impact Forecasting & Response Intelligence System"
authors = ["Team Revolution"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = ">=1.28.0"
pandas = ">=1.5.0"
numpy = ">=1.24.0"
xgboost = ">=1.7.0"
scikit-learn = ">=1.2.0,<1.5"
plotly = ">=5.14.0"
matplotlib = ">=3.7.0"
joblib = ">=1.2.0"
shap = ">=0.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"