[tool.poetry]
name = "cascadeiq"
version = "1.0.0"
description = "Event Impact Forecasting & Response Intelligence System — Gridlock-Flipkart 2.0 Hackathon"
authors = ["Gridlock-Flipkart Team"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.109.0"
uvicorn = ">=0.27.0"
pandas = ">=1.5.0"
numpy = ">=1.24.0"
xgboost = ">=1.7.0"
scikit-learn = ">=1.2.0,<1.5"
joblib = ">=1.2.0"
shap = ">=0.41.0"
python-multipart = ">=0.0.6"
networkx = ">=3.0"
scipy = ">=1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"