[tool.poetry]
name = "rippl"
version = "1.0.0"
description = "Event Impact Forecasting & Response Intelligence System"
authors = ["Team Revolution"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = ">=0.109.0"
uvicorn = ">=0.27.0"
numpy = ">=2.0.0"
pandas = ">=2.2.0"
scipy = ">=1.13.0"
scikit-learn = ">=1.5.0"
xgboost = ">=2.0.0"
networkx = ">=3.0"
joblib = ">=1.3.0"
shap = ">=0.46.0"
python-multipart = ">=0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"